Changelog
=========
[Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]

2.1-dev - (unreleased)
----------------------
* Feature: Added script to check packages release on pypi but not on plone.org
  [voineali]

2.0 - (2013-03-06)
------------------
* Bug fix: commit version.txt and history.txt before releasing package
  [tiberich #13987]

1.9 - (2013-02-08)
------------------
* Bug fix: don't fail if incompatible version of zc.buildout is used
  This is used in the clean sources folder
  [tiberich]

1.8 - (2013-01-28)
------------------
* Bug fix: added info about what fields are required in package metadata
  [tiberich]

1.7 - (2013-01-15)
------------------
* Bug fix: strip BOM from first character in file
  [tiberich]
* Bug fix: don't abort if failing to install collective.dist
  [tiberich]

1.6 - (2012-11-22)
------------------
* Bug fix: fixed /src cleanup when repo source ends with /
  [ghicaale refs #9527]

1.5 - (2012-11-22)
------------------
* Bug fix: improve history parsing when no empty lines are left between
  version sections
  [tiberich refs #10000]

1.4 - (2012-11-20)
------------------
* Bug fix: add a newline in generated MANIFEST.in
  [tiberich refs #5493]

1.3 - (2012-08-29)
------------------
* Bug fix: Push tags on github when releasing new eggs
  [voineali fixes #5486]

1.2 - (2012-08-07)
------------------
* Change: make manual upload the default operation, avoids problem with
  eea eggrepo server.
  [tiberich #5356]

1.1 - (2012-08-07)
------------------
* Feature: added utility script that will simply make a package be at -dev
  version. This is useful when developing eggmonkey itself.
  [tiberich #5356]
* Bug fix: fixed handling of default domains
  [tiberich #5356]
* Bug fix: fix handling commits with git repos
  [tiberich #5356]

1.0 - (2012-07-13)
------------------
* Feature: improved output with changelog of unreleased eggs,
  so we quickly know what is in each unreleased egg.
  [demarant refs #5224]