@@ -6,6 +6,10 @@ Changelog
 ----------------------
 * Feature: Added script to check packages release on pypi but not on plone.org
   [voineali]
+* Bug fix: changed check_latest script to use the .installed.cfg file to 
+  get egg information, avoid messing around in buildout internals and depend
+  on zc.buildout.unloadextension which doesn't seem to work properly
+  [tiberich #14390]
 
 2.0 - (2013-03-06)
 ------------------
